--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 			<div class="ryu-ready"></div>
 			<div class="ryu-throwing"></div>
 		</div>
-	</div>		
+	</div>	
+	<audio id="hadouken-sound" src="sound/hadouken.mp3">	
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
