--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
 	<div class="main">
+		
 		<div class="ryu">
 			<div class="hadouken"></div>
 			<div class="ryu-still"></div>
 			<div class="ryu-ready"></div>
 			<div class="ryu-throwing"></div>
+			<div class="ryu-cool"></div>
 		</div>
 	</div>	
 	<audio id="hadouken-sound" src="sound/hadouken.mp3">	
@@ -20,3 +22,4 @@
 	<script src="js/app.js"></script>
 </body>
 </html>
+`
