some instruction text adeed

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
 	<div class="main">
 		
+			<p class="p1">Click on Ryu to make him throw a Hadouken.</p>
+			<p class="p2">Press and hold down the "x" key to make him strike his cool pose!</p>
+		
+
 		<div class="ryu">
 			<div class="hadouken"></div>
 			<div class="ryu-still"></div>
